feat: Dutch auction feature phase-I